--- a/TicTacToeProject/src/testgui/Online.fxml
+++ b/TicTacToeProject/src/testgui/Online.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -44,7 +45,6 @@
                   <Image url="@../images/user_2.png" />
                </image>
             </ImageView>
-            <TextField fx:id="Password" layoutX="101.0" layoutY="242.0" promptText="Password" style="-fx-border-color: #60408b; -fx-background-color: transparent; -fx-border-width: 0px 0px 2px 0px;" />
             <ImageView fitHeight="23.0" fitWidth="22.0" layoutX="65.0" layoutY="245.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../images/key.png" />
@@ -62,6 +62,7 @@
             </ImageView>
             <Label layoutX="94.0" layoutY="362.0" text="Don't have account yet ?" />
             <Button fx:id="signup" layoutX="216.0" layoutY="357.0" mnemonicParsing="false" onAction="#signuphandler" prefHeight="25.0" prefWidth="60.0" style="-fx-background-color: transitive;" text="Signup" textFill="#60408b" />
+            <PasswordField fx:id="Password" layoutX="101.0" layoutY="242.0" promptText="Password" style="-fx-border-color: #60408b; -fx-background-color: transparent; -fx-border-width: 0px 0px 2px 0px;" />
          </children>
       </AnchorPane>
    </right>
