--- a/TicTacToeProject/src/testgui/SignUp.fxml
+++ b/TicTacToeProject/src/testgui/SignUp.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -39,7 +40,6 @@
                   <Image url="@../images/icononline.png" />
                </image>
             </ImageView>
-            <TextField fx:id="PasswordTxt" layoutX="101.0" layoutY="256.0" promptText="Password" style="-fx-border-color: #60408b; -fx-background-color: transparent; -fx-border-width: 0px 0px 2px 0px;" />
             <ImageView fitHeight="25.0" fitWidth="27.0" layoutX="64.0" layoutY="205.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../images/user_2.png" />
@@ -64,6 +64,7 @@
             </ImageView>
             <Label layoutX="113.0" layoutY="369.0" prefHeight="17.0" prefWidth="102.0" text="Have an account ?" />
             <Button layoutX="205.0" layoutY="363.0" mnemonicParsing="false" onAction="#signinAction" style="-fx-background-color: transitive;" text="Signin" textFill="#60408b" />
+            <PasswordField fx:id="PasswordTxt" layoutX="101.0" layoutY="256.0" promptText="Password" style="-fx-border-color: #60408b; -fx-background-color: transparent; -fx-border-width: 0px 0px 2px 0px;" />
          </children>
       </AnchorPane>
    </center>
